force-app/main/default/objects/Bank_Account__c/fields/Account_Holders_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Holders_Name__c</fullName>
    <label>Account Holders Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>