force-app/main/default/objects/Bank_Account__c/fields/Bank_Address__c.field-meta.xml
<CustomField>
    <fullName>Bank_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Address</label>
    <referenceTo>npsp__Address__c</referenceTo>
    <relationshipLabel>Bank Acccounts</relationshipLabel>
    <relationshipName>Bank_Acccounts</relationshipName>
    <type>Lookup</type>
</CustomField>