force-app/main/default/objects/Bank_Account__c/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <description>International Bank Account Number</description>
    <label>IBAN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>