force-app/main/default/objects/Bank_Account__c/fields/Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>Sort_Code__c</fullName>
    <label>Sort Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>